Fix overflow

--- a/assets/scss/components/content/_award.scss
+++ b/assets/scss/components/content/_award.scss
@@ -6,7 +6,7 @@
 .award-container {
 	max-height: calc(var(--vh, 1vh) * 90 - var(--wp-admin-bar, 0px));
 	overflow-y: hidden;
-	overflow-x: visible;
+	overflow-x: hidden;
 	display: grid;
 	grid-template-columns: repeat(2, 50%);
 	background-color: white;
@@ -48,12 +48,14 @@
 	.award-menu-container {
 		border-right: 2px solid var(--color-black);
 		overflow-y: auto;
+		overflow-x: hidden;
 		height: calc(var(--vh, 1vh) * 90 - var(--wp-admin-bar, 0px));
 	}
 	
 	.award-edition-container {
 		padding: 1em;
 		overflow-y: auto;
+		overflow-x: hidden;
 		height: calc(var(--vh, 1vh) * 90 - var(--wp-admin-bar, 0px));
 		border-left: 2px solid var(--color-black);
 	}
